sumo/tests/jtrrouter/errors/unknown_vType_ignore/routes.jtrrouter
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Thu Feb  4 08:03:44 2016 by SUMO jtrrouter Version dev-SVN-r19862
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/jtrrouterConfiguration.xsd">

    <input>
        <net-file value="input_net.net.xml"/>
        <flow-files value="input_flows.flows.xml"/>
    </input>

    <output>
        <output-file value="routes.rou.xml"/>
    </output>

    <processing>
        <ignore-errors value="true"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd"/>
